# DeepSeek-TUI

./: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  config.example.toml
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/mcp/: Cargo.toml
crates/secrets/src/: lib.rs
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: client.rs  command_safety.rs  config.rs  hooks.rs  localization.rs  main.rs  network_policy.rs  palette.rs  prompts.rs  runtime_api.rs  runtime_threads.rs  schema_migration.rs  session_manager.rs  task_manager.rs  telemetry.rs  utils.rs
crates/tui/src/client/: chat.rs
crates/tui/src/commands/: config.rs  debug.rs  init.rs  mod.rs  session.rs  skills.rs
crates/tui/src/core/: engine.rs  events.rs
crates/tui/src/core/engine/: tool_execution.rs  turn_loop.rs
crates/tui/src/prompts/: agent.txt  base.md  base.txt
crates/tui/src/prompts/approvals/: never.md
crates/tui/src/prompts/modes/: agent.md
crates/tui/src/repl/: runtime.rs  sandbox.rs
crates/tui/src/rlm/: bridge.rs  turn.rs
crates/tui/src/sandbox/: backend.rs  opensandbox.rs
crates/tui/src/snapshot/: repo.rs
crates/tui/src/tools/: fetch_url.rs  mod.rs  registry.rs  shell.rs  spec.rs  tasks.rs  truncate.rs  web_run.rs
crates/tui/src/tools/shell/: tests.rs
crates/tui/src/tools/subagent/: mod.rs  tests.rs
crates/tui/src/tui/: app.rs  color_compat.rs  context_inspector.rs  file_mention.rs  history.rs  keybindings.rs  mod.rs  shell_job_routing.rs  sidebar.rs  subagent_routing.rs  transcript.rs  ui.rs
crates/tui/src/tui/onboarding/: trust_directory.rs
crates/tui/src/tui/streaming/: chunking.rs  commit_tick.rs  mod.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/widgets/: agent_card.rs  mod.rs
crates/tui/tests/: integration_mock_llm.rs  skill_install.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  LOCAL_WORKFLOW.md  OPENTELEMETRY.md  RUNTIME_API.md  SECONDARY_DEVELOPMENT.md  TOOL_SURFACE.md
npm/deepseek-tui/: README.md  package.json
npm/deepseek-tui/scripts/: artifacts.js  install.js
